--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1661,6 +1661,9 @@
 
 		}
 
+	.head-image {
+		width: 50% !important;
+	}
 	body {
 		color: #212931;
 	}
@@ -1816,7 +1819,7 @@
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #18bfef !important;
+			color: #000000 !important;
 		}
 
 	strong, b {
@@ -2025,7 +2028,7 @@
 		button:hover,
 		.button:hover {
 			box-shadow: inset 0 0 0 2px #18bfef;
-			color: #18bfef !important;
+			color: #000000 !important;
 		}
 
 		input[type="submit"].special,
@@ -2043,7 +2046,7 @@
 			input[type="button"].special:hover,
 			button.special:hover,
 			.button.special:hover {
-				background-color: #18bfef;
+				background-color: #000000;
 			}
 
 /* Form */
@@ -2699,7 +2702,7 @@
 	}
 
 	ul.icons li a.icon:hover:before {
-		color: #18bfef;
+		color: #000000;
 	}
 
 	ul.icons.alt li .icon:before {
@@ -3033,12 +3036,12 @@
 			left: 0;
 			width: 100%;
 			height: 100%;
-			background-color: #212931;
-			background-image: url("../../images/totalbg.jpg");
-			background-size: auto,								auto,														100% cover;
-			background-position: center,								center,														top center;
-			background-repeat: repeat,								no-repeat,													no-repeat;
-			background-attachment: scroll,								scroll,														scroll;
+			background-color:#39C6F4 /*#212931*/;
+			/*background-image: url("../../images/full-logo.png");*/
+			background-size: 100% cover;
+			background-position: top center;
+			background-repeat: no-repeat;
+			background-attachment: scroll;
 			z-index: -1;
 		}
 
@@ -3088,7 +3091,7 @@
 
 	#intro {
 		color: #ffffff;
-		padding: 8rem 4rem 6rem 4rem ;
+		padding: 0rem 4rem 6rem 4rem ;
 		-moz-align-items: center;
 		-webkit-align-items: center;
 		-ms-align-items: center;
@@ -3104,7 +3107,7 @@
 		-moz-justify-content: -moz-flex-end;
 		-webkit-justify-content: -webkit-flex-end;
 		-ms-justify-content: -ms-flex-end;
-		justify-content: flex-end;
+		/*justify-content: flex-end;*/
 		-moz-transition: opacity 1s ease, -moz-transform 1s ease;
 		-webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
 		-ms-transition: opacity 1s ease, -ms-transform 1s ease;
@@ -3113,7 +3116,7 @@
 		cursor: default;
 		text-align: center;
 		z-index: 1;
-		min-height: 100vh;
+		min-height: 40vh;
 	}
 
 		#intro input, #intro select, #intro textarea {
@@ -3166,8 +3169,8 @@
 			#intro input[type="button"]:hover,
 			#intro button:hover,
 			#intro .button:hover {
-				box-shadow: inset 0 0 0 2px #18bfef;
-				color: #18bfef !important;
+				box-shadow: inset 0 0 0 2px #000000;
+				color: #000000 !important;
 			}
 
 			#intro input[type="submit"].special,
@@ -3342,7 +3345,7 @@
 
 			#header a:hover {
 				border-bottom-color: transparent;
-				color: #18bfef !important;
+				color: #000000 !important;
 			}
 
 		#header strong, #header b {
@@ -3388,7 +3391,7 @@
 
 			#header .logo:hover {
 				border-color: #18bfef !important;
-				color: #18bfef !important;
+				color: #000000 !important;
 			}
 
 		@media screen and (max-width: 980px) {
@@ -3442,7 +3445,7 @@
 		}
 
 		#nav ul.icons li a.icon:hover:before {
-			color: #18bfef;
+			color: #000000;
 		}
 
 		#nav ul.icons.alt li .icon:before {
