updated team page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2416,8 +2416,10 @@
 		float: none;
 		border: 2px solid #d7d7d7;
 		border-radius: 50%;
-		width: 200px;
-		height: 200px;
+		width: 200px !important;
+		height: 200px !important;
+		align-self: center;
+		justify-content: center;
 		overflow: hidden;
 	}
 
@@ -3679,6 +3681,7 @@
 				border-left-width: 2px;
 				border-style: solid;
 				border-top-width: 2px;
+	
 				text-align: center;
 			}
 
